--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -12,7 +12,12 @@ alias -jumpthrow "-jump"
 bind "space" +jumpthrow
 
 // custom binds
-bind "mwheeldown" +jump
+bind mouse1 "+attack; r_cleardecals"
+bind mwheeldown "+jump"
+cl_autowepswitch 0
+r_drawtracers_firstperson 0
+volume .4
+cl_use_opens_buy_menu 0
 
 // buy binds
 bind "f3" "buy ak47; buy m4a1; buy vesthelm; buy vest; buy defuser;"
@@ -41,7 +46,7 @@ viewmodel_offset_x "2.5"
 viewmodel_offset_y "2.0"
 viewmodel_offset_z "-2.0"
 viewmodel_presetpos "0"
-viewmodel_recoil "1.0"
+viewmodel_recoil "0"
 cl_bob_lower_amt "5.000000"
 cl_bobamt_lat "0.100000"
 cl_bobamt_vert "0.100000"
@@ -72,6 +77,5 @@ net_graphproportionalfont "1"
 
 fps_max 0
 
-play weapons/party_horn_01
 clear;
 echo B3none autoexec.cfg loaded.
