--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -24,19 +24,29 @@ bind "f3" "buy ak47; buy m4a1; buy vesthelm; buy vest; buy defuser;"
 bind "f4" "buy smokegrenade; buy flashbang; buy hegrenade; buy incgrenade; buy molotov; buy flashbang;"
 
 // crosshair
-cl_crosshairstyle 4
-cl_crosshairsize 4
-cl_crosshairthickness 1
-cl_crosshairgap 0
-cl_crosshair_drawoutline 1
-cl_crosshair_outlinethickness 1
-cl_crosshairdot 0
-cl_crosshair_t 0
-cl_crosshaircolor 1
-cl_crosshaircolor_r 152
-cl_crosshaircolor_g 0
-cl_crosshaircolor_b 200
-cl_crosshairalpha 255
+cl_crosshair_drawoutline "1"
+cl_crosshair_dynamic_maxdist_splitratio "0.300000"
+cl_crosshair_dynamic_splitalpha_innermod "1"
+cl_crosshair_dynamic_splitalpha_outermod "0.500000"
+cl_crosshair_dynamic_splitdist "7"
+cl_crosshair_friendly_warning "1"
+cl_crosshair_outlinethickness "1"
+cl_crosshair_sniper_show_normal_inaccuracy "0"
+cl_crosshair_sniper_width "1"
+cl_crosshair_t "0"
+cl_crosshairalpha "200"
+cl_crosshaircolor "5"
+cl_crosshaircolor_b "255"
+cl_crosshaircolor_g "255"
+cl_crosshaircolor_r "255"
+cl_crosshairdot "0"
+cl_crosshairgap "-2.000000"
+cl_crosshairgap_useweaponvalue "0"
+cl_crosshairsize "1.000000"
+cl_crosshairstyle "4"
+cl_crosshairthickness "0.700000"
+cl_crosshairusealpha "1"
+cl_fixedcrosshairgap "3.000000"
 
 // viewmodel
 cl_viewmodel_shift_left_amt "0.500000"
