--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -20,7 +20,7 @@ volume .4
 cl_use_opens_buy_menu 0
 
 // buy binds
-bind "f3" "buy ak47; buy m4a1; buy vesthelm; buy vest; buy defuser;"
+bind "f3" "buy ak47; buy m4a1; buy vesthelm; buy defuser;"
 bind "f4" "buy smokegrenade; buy flashbang; buy hegrenade; buy incgrenade; buy molotov; buy flashbang;"
 
 // crosshair
