Update sound settings and implement sound section

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -13,11 +13,17 @@ bind "space" +jumpthrow
 
 // custom binds
 bind mouse1 "+attack; r_cleardecals"
+unbind mwheelup
 bind mwheeldown "+jump"
 cl_autowepswitch 0
 r_drawtracers_firstperson 0
-volume .4
 cl_use_opens_buy_menu 0
+fps_max 0
+
+// sound binds
+volume .4
+snd_menumusic_volume 0
+snd_tensecondwarning_volume .1
 
 // buy binds
 bind "f3" "buy ak47; buy m4a1; buy vesthelm; buy defuser;"
@@ -84,8 +90,6 @@ cl_radar_rotate "1"
 cl_radar_scale "0.700000"
 cl_radar_square_with_scoreboard "1"
 net_graphproportionalfont "1"
-
-fps_max 0
 
 clear;
 echo B3none autoexec.cfg loaded.
