Disable gameinstructor and allow seeing other players crosshairs

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -19,6 +19,8 @@ cl_autowepswitch 0
 r_drawtracers_firstperson 0
 cl_use_opens_buy_menu 0
 fps_max 0
+cl_show_observer_crosshair 2
+gameinstructor_enable 0
 
 // sound binds
 volume .4
